Command refactor